# rebot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  entrypoint.sh  flake.nix
.github/workflows/: ci.yml
src/: config.rs  discord.rs  lib.rs  main.rs  player_store.rs  scraper.rs  server.rs
src/model/: mod.rs  player_stat.rs
