[package]
name = "rebot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chromiumoxide = "0.7.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
poise = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = { version = "0.12.4", features = ["client", "gateway", "voice"] }
songbird = "0.5.0"
symphonia = { version = "0.5.4", features = ["mp3"]}
tokio = { version="1.46.1", features = ["full"] }
